@@ -1,3 +1,9 @@
 SUBDIRS = src
+
+noinst_SCRIPT = wrapitup
+
+x-includes:
+	@sh mkxincludes
+
 EXTRA_DIST = docs/docs.html GPL prebuilt/wacom_drv.o \
 		docs/docs_files/null.gif docs/docs_files/sflogo.png
