@@ -1,3 +1,6 @@
+2003-06-16    John E. Joganic <john@joganic.com>
+	* Added mkxincludes, automatic check for x-includes in configure
+
 2003-06-15    John E. Joganic <john@joganic.com>
 	* Released version 0.5.1-beta
 
